--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,5 +6,6 @@
         "ms-python.debugpy",
         "rodolphebarbanneau.python-docstring-highlighter",
         "njqdev.vscode-python-typehint",
+        "charliermarsh.ruff"
     ]
 }
