--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=2.2.1",
     "pyqt5>=5.15.11",
     "pytest>=8.3.4",
+    "scipy>=1.15.1",
 ]
 
 [tool.pytest.ini_options]
